feat: :sparkles: Class imported